--- a/ios/WorkplaceBeacons/Info.plist
+++ b/ios/WorkplaceBeacons/Info.plist
@@ -37,6 +37,10 @@
 	<true/>
 	<key>UILaunchStoryboardName</key>
 	<string>LaunchScreen</string>
+	<key>NSLocationWhenInUseUsageDescription</key>
+	<string>We use location to discover nearby workplace beacons.</string>
+	<key>NSBluetoothAlwaysUsageDescription</key>
+	<string>We use Bluetooth to scan for nearby workplace beacons.</string>
 	<key>UIRequiredDeviceCapabilities</key>
 	<array>
 		<string>arm64</string>
