--- a/package.json
+++ b/package.json
@@ -7,17 +7,21 @@
     "ios": "react-native run-ios",
     "lint": "eslint .",
     "start": "react-native start",
-    "test": "jest"
+    "test": "jest",
+    "postinstall": "patch-package"
   },
   "dependencies": {
     "@react-native/new-app-screen": "0.81.4",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-beacons-manager": "^1.0.7",
     "react-native-safe-area-context": "^5.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.0",
+    "@babel/core": "^7.28.4",
     "@babel/eslint-parser": "^7.28.4",
+    "@babel/plugin-syntax-flow": "^7.27.1",
+    "@babel/plugin-syntax-typescript": "^7.27.1",
     "@babel/plugin-transform-flow-strip-types": "^7.25.0",
     "@babel/preset-env": "^7.25.3",
     "@babel/runtime": "^7.25.0",
@@ -34,6 +38,8 @@
     "eslint": "^9.36.0",
     "jest": "^29.6.3",
     "metro-react-native-babel-preset": "^0.77.0",
+    "patch-package": "^8.0.1",
+    "postinstall-postinstall": "^2.1.0",
     "prettier": "2.8.8",
     "react-test-renderer": "19.1.0",
     "typescript": "^5.8.3"
